# PICO

./: .gitignore
FREERTOS_PICO/RGB_UART/: CMakeLists.txt  rgb_uart.c
FREERTOS_PICO/RGB_USB/: CMakeLists.txt  main.c  rgb_usb.c  tusb_config.h  usb_descriptors.c
FREERTOS_PICO/blink/: blink.c  main.c
FREERTOS_PICO/blink_rtos/: CMakeLists.txt  main.c
FREERTOS_PICO/pwm/: CMakeLists.txt  main.c
FREERTOS_PICO/pwm_led_fade/: CMakeLists.txt  main.c
FREERTOS_PICO/pwm_rtos/: CMakeLists.txt  main.c
PICO_DOCS/: adafruit-circuitpython-raspberry_pi_pico-ru-8.2.7.uf2  firmware.uf2  Ссылки
PICO_PYTHON_CODE/1_test/: code.py
PICO_PYTHON_CODE/AQUA/: main.py
PICO_PYTHON_CODE/PWM/: main.py
PICO_PYTHON_CODE/PWM_GRB/: main.py
_PYTHON_CODE/PWM/: main.py
